--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-notify-toast": "^0.5.1",
     "react-responsive": "^8.1.0",
     "react-responsive-carousel": "^3.2.9",
     "react-router": "^5.2.0",
