--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.28",
-    "react-notify-toast": "^0.5.1"
+    "mongoose": "^5.9.28"
   }
 }
